# euc_qla_sqpf

./: .gitmodules  CMakeLists.txt  GPATH  GRTAGS  GTAGS  common.cmake  version.h
filetools/: CMakeLists.txt  filetools.cpp  filetools.h  jsonfhdl.cpp  jsonfhdl.h  qdtrephdl.cpp  qdtrephdl.h
fmk/: CMakeLists.txt  balmode.cpp  balmode.h  cntrmng.cpp  cntrmng.h  createSkeletons.sh  cs.cpp  cs.h  datamng.cpp  datamng.h  dbhdl.h  dbhdlpostgre.cpp  dbhdlpostgre.h  dckmng.cpp  dckmng.h  fifo.cpp  fifo.h  fmt.h  fnamespec.cpp  fnamespec.h  fv.cpp  fv.h  master.cpp  master.h  masterrequester.cpp  masterrequester.h  masterserver.cpp  masterserver.h  procnet.cpp  procnet.h  prodloc.cpp  prodloc.h  q.cpp  q.h  srvmng.cpp  srvmng.h  taskagent.cpp  taskagent.h  taskmng.cpp  taskmng.h  (+7 more)
httpsc/: CMakeLists.txt  httpcommrqst.cpp  httpcommrqst.h  httpcommsrv.cpp  httpcommsrv.h  rwc.cpp  rwc.h
infix/: CMakeLists.txt
json/: json.cpp  json.h
log/: CMakeLists.txt
q/: CMakeLists.txt  q.h
qpf/: CMakeLists.txt  deployer.cpp  deployer.h  main.cpp
scripts/: FeedDataIntoQPF.sh  log4cpp.properties  sqpf-cfg.json  sqpf-multihost.json  sqpf_GetDataInfoInbox.sh  test-node.sh  test_content
